fix error message not showing on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -174,15 +174,19 @@ a:hover {
 
 .search {
   position: relative;
+  margin-top: 36px;
+}
+
+.search__bar {
+  position: relative;
   display: flex;
   align-items: center;
   column-gap: 7px;
-  margin-top: 36px;
   padding: 7px;
   overflow: hidden;
 }
 
-.search.loading::after {
+.search.loading .search__bar::after {
   content: "";
   position: absolute;
   left: 0;
@@ -227,7 +231,7 @@ a:hover {
   transform: translateX(-50%);
   font-size: 13px;
   color: var(--color-error);
-}
+} 
 
 .button {
   min-width: 84px;
@@ -265,12 +269,14 @@ a:hover {
 
 @media screen and (min-width: 1110px) {
   .search__error {
-    position: relative;
-    top: unset;
+    position: absolute;
+    top: 50%;
+    bottom: unset;
     left: unset;
-    transform: unset;
+    right: 148px;
+    transform: translateY(-50%);
     font-size: 15px;
-  }
+  } 
 }
 
 /* Detail */
